--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,4 @@
   <button (click)="send()">SEND</button>
 </div>
 
-<h3 *ngIf="message">{{message}}</h3>click the bottem sent to.
-
-
-
-
-the data will be better then the ping
+<h3 *ngIf="message">{{message}}</h3>this app will report bugs from games
