--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,8 @@
   <button (click)="send()">SEND</button>
 </div>
 
-<h3 *ngIf="message">{{message}}</h3>this app will report bugs from games
+<h3 *ngIf="message">{{message}}</h3>
+
+<div> this app will report bugs from games  </div>
+
+<div>  warning this app you must have to do correct spelling  </div>
